// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Avatar initials from "Aleyna Kaya" → AK 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "AK",
              ],
              "props": {
                "style": {
                  "color": "#2E3E8C",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 17,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 17,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#DBE2F0",
              "borderRadius": 22,
              "height": 44,
              "justifyContent": "center",
              "width": 44,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "padding": 0,
          "width": 44,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 44,
      "width": 44,
    },
  },
  "type": "View",
}
`;

exports[`Avatar initials from single name → A 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "A",
              ],
              "props": {
                "style": {
                  "color": "#27408A",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 17,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 17,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#D6E0F4",
              "borderRadius": 22,
              "height": 44,
              "justifyContent": "center",
              "width": 44,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "padding": 0,
          "width": 44,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 44,
      "width": 44,
    },
  },
  "type": "View",
}
`;

exports[`Avatar size 92 (large profile) scales the box + font 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "KD",
              ],
              "props": {
                "style": {
                  "color": "#2E3E8C",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 35,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 35,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#DBE2F0",
              "borderRadius": 46,
              "height": 92,
              "justifyContent": "center",
              "width": 92,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 46,
          "height": 92,
          "justifyContent": "center",
          "padding": 0,
          "width": 92,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 92,
      "width": 92,
    },
  },
  "type": "View",
}
`;

exports[`Avatar with ring renders a colored outer container with 3px padding 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "M",
              ],
              "props": {
                "style": {
                  "color": "#2742A0",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 14,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 14,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#DDE3F2",
              "borderRadius": 19,
              "height": 38,
              "justifyContent": "center",
              "width": 38,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": "#2270BC",
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "padding": 3,
          "width": 44,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 44,
      "width": 44,
    },
  },
  "type": "View",
}
`;

exports[`Avatar with number badge renders pink-deep circle + numeric text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "M",
              ],
              "props": {
                "style": {
                  "color": "#2742A0",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 17,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 17,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#DDE3F2",
              "borderRadius": 22,
              "height": 44,
              "justifyContent": "center",
              "width": 44,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "padding": 0,
          "width": 44,
        },
      },
      "type": "View",
    },
    {
      "children": [
        {
          "children": [
            1,
          ],
          "props": {
            "style": {
              "color": "#FFFFFF",
              "fontSize": 11,
              "fontWeight": "800",
            },
          },
          "type": "Text",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": "#C81E92",
          "borderColor": "#1A1A1A",
          "borderRadius": 9,
          "borderWidth": 1.5,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingHorizontal": 4,
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 44,
      "width": 44,
    },
  },
  "type": "View",
}
`;

exports[`Avatar with frozen badge renders snow icon over frozen color 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "M",
              ],
              "props": {
                "style": {
                  "color": "#2742A0",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 17,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 17,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#DDE3F2",
              "borderRadius": 22,
              "height": 44,
              "justifyContent": "center",
              "width": 44,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "padding": 0,
          "width": 44,
        },
      },
      "type": "View",
    },
    {
      "children": [
        {
          "children": [],
          "props": {
            "color": "#FFFFFF",
            "name": "snow",
            "size": 10,
            "stroke": 2.4,
          },
          "type": "Icon",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": "#5E7CB4",
          "borderColor": "#1A1A1A",
          "borderRadius": 9,
          "borderWidth": 1.5,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingHorizontal": 4,
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 44,
      "width": 44,
    },
  },
  "type": "View",
}
`;

exports[`Avatar with level badge renders the supplied icon + color 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                "M",
              ],
              "props": {
                "style": {
                  "color": "#2742A0",
                  "fontFamily": "PlusJakartaSans-ExtraBold",
                  "fontSize": 17,
                  "fontWeight": "800",
                  "includeFontPadding": false,
                  "lineHeight": 17,
                  "textAlign": "center",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#DDE3F2",
              "borderRadius": 22,
              "height": 44,
              "justifyContent": "center",
              "width": 44,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "padding": 0,
          "width": 44,
        },
      },
      "type": "View",
    },
    {
      "children": [
        {
          "children": [],
          "props": {
            "color": "#FFFFFF",
            "name": "crown",
            "size": 10,
            "stroke": 2.4,
          },
          "type": "Icon",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "backgroundColor": "#2742A0",
          "borderColor": "#1A1A1A",
          "borderRadius": 9,
          "borderWidth": 1.5,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingHorizontal": 4,
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "height": 44,
      "width": 44,
    },
  },
  "type": "View",
}
`;

exports[`TabBar renders 5 slots with index active 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "pointerEvents": "none",
                "style": [
                  {
                    "backgroundColor": "#2270BC",
                    "borderRadius": 24,
                    "height": 48,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 48,
                  },
                  {
                    "opacity": 0,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateY": 0,
                      },
                    ],
                  },
                ],
              },
              "type": "Animated.View",
            },
            {
              "children": [
                {
                  "children": [],
                  "props": {
                    "isActive": true,
                    "onLayout": [Function],
                    "onPress": "[Function]",
                    "slot": {
                      "icon": "home",
                      "label": "Anasayfa",
                      "name": "index",
                    },
                  },
                  "type": "TabSlot",
                },
                {
                  "children": [],
                  "props": {
                    "isActive": false,
                    "onLayout": [Function],
                    "onPress": "[Function]",
                    "slot": {
                      "icon": "calendar",
                      "label": "Maçlar",
                      "name": "matches",
                    },
                  },
                  "type": "TabSlot",
                },
                {
                  "children": [],
                  "props": {
                    "isActive": false,
                    "onLayout": [Function],
                    "onPress": "[Function]",
                    "slot": {
                      "isCenter": true,
                      "label": "Yeni maç",
                      "name": "new-match",
                    },
                  },
                  "type": "TabSlot",
                },
                {
                  "children": [],
                  "props": {
                    "isActive": false,
                    "onLayout": [Function],
                    "onPress": "[Function]",
                    "slot": {
                      "icon": "ranking",
                      "label": "Sıralama",
                      "name": "leaderboard",
                    },
                  },
                  "type": "TabSlot",
                },
                {
                  "children": [],
                  "props": {
                    "isActive": false,
                    "onLayout": [Function],
                    "onPress": "[Function]",
                    "slot": {
                      "icon": "user",
                      "label": "Profil",
                      "name": "profile",
                    },
                  },
                  "type": "TabSlot",
                },
              ],
              "props": {},
              "type": "Fragment",
            },
          ],
          "props": {
            "className": "flex-row items-center justify-between",
            "style": {
              "flex": 1,
              "position": "relative",
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "className": "h-16 flex-row items-center rounded-pill border-base border-white bg-lime px-2",
      },
      "type": "View",
    },
  ],
  "props": {
    "className": "bg-bg px-4 pt-2",
    "style": {
      "paddingBottom": 42,
    },
  },
  "type": "View",
}
`;
